--- a/mobilenet.ipynb
+++ b/mobilenet.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Efficient Net"
+    "# Mobile Net"
    ]
   },
   {
@@ -16,9 +16,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "c:\\Users\\benoi\\AppData\\Local\\pypoetry\\Cache\\virtualenvs\\projet-8inf974-qm87_-2b-py3.9\\lib\\site-packages\\tqdm\\auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
+      "  from .autonotebook import tqdm as notebook_tqdm\n"
+     ]
+    }
+   ],
    "source": [
     "import torch\n",
     "import torch.nn as nn\n",
@@ -26,10 +35,10 @@
     "from timm import create_model\n",
     "import lightning as L\n",
     "\n",
-    "class EfficientNetPL(L.LightningModule):\n",
+    "class MobileNetPL(L.LightningModule):\n",
     "    def __init__(self, num_classes):\n",
     "        super().__init__()\n",
-    "        self.model = create_model('efficientnet_b0', pretrained=False)\n",
+    "        self.model = create_model('mobilenetv3_small_050', pretrained=False)\n",
     "        num_ftrs = self.model.classifier.in_features\n",
     "        self.model.classifier = nn.Linear(num_ftrs, num_classes)\n",
     "        self.criterion = nn.CrossEntropyLoss()\n",
@@ -56,7 +65,7 @@
     "    def configure_optimizers(self):\n",
     "        return optim.Adam(self.parameters(), lr=0.001)\n",
     "    \n",
-    "model_class = EfficientNetPL"
+    "model_class = MobileNetPL"
    ]
   },
   {
@@ -112,9 +121,51 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "GPU available: False, used: False\n",
+      "TPU available: False, using: 0 TPU cores\n",
+      "IPU available: False, using: 0 IPUs\n",
+      "HPU available: False, using: 0 HPUs\n",
+      "\n",
+      "  | Name      | Type             | Params\n",
+      "-----------------------------------------------\n",
+      "0 | model     | EfficientNet     | 4.0 M \n",
+      "1 | criterion | CrossEntropyLoss | 0     \n",
+      "-----------------------------------------------\n",
+      "4.0 M     Trainable params\n",
+      "0         Non-trainable params\n",
+      "4.0 M     Total params\n",
+      "16.081    Total estimated model params size (MB)\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "                                                                           "
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "c:\\Users\\benoi\\AppData\\Local\\pypoetry\\Cache\\virtualenvs\\projet-8inf974-qm87_-2b-py3.9\\lib\\site-packages\\lightning\\pytorch\\trainer\\connectors\\data_connector.py:441: The 'train_dataloader' does not have many workers which may be a bottleneck. Consider increasing the value of the `num_workers` argument` to `num_workers=11` in the `DataLoader` to improve performance.\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch 0:   0%|          | 0/469 [00:00<?, ?it/s] "
+     ]
+    }
+   ],
    "source": [
     "from pipeline import FashionMNIST_EXP\n",
     "\n",
