--- a/vit.ipynb
+++ b/vit.ipynb
@@ -18,7 +18,16 @@
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "c:\\Users\\benoi\\AppData\\Local\\pypoetry\\Cache\\virtualenvs\\projet-8inf974-qm87_-2b-py3.9\\lib\\site-packages\\tqdm\\auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
+      "  from .autonotebook import tqdm as notebook_tqdm\n"
+     ]
+    }
+   ],
    "source": [
     "import torch\n",
     "import torch.nn as nn\n",
@@ -62,31 +71,58 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## CIFAR 10"
+    "## Cifar 10"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from pipeline import CIFAR10_EXP\n",
+    "\n",
+    "# Instantiate the model\n",
+    "model = model_class(num_classes=10)\n",
+    "\n",
+    "# Train using PyTorch Lightning Trainer\n",
+    "CIFAR10_EXP(model)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## MNIST"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from pipeline import MNIST_EXP\n",
+    "\n",
+    "# Instantiate the model\n",
+    "model = model_class(num_classes=10)\n",
+    "\n",
+    "# Train using PyTorch Lightning Trainer\n",
+    "MNIST_EXP(model)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## FashionMNIST"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Seed set to 42\n",
-      "c:\\Users\\benoi\\AppData\\Local\\pypoetry\\Cache\\virtualenvs\\projet-8inf974-qm87_-2b-py3.9\\lib\\site-packages\\torch\\nn\\modules\\transformer.py:286: UserWarning: enable_nested_tensor is True, but self.use_nested_tensor is False because encoder_layer.self_attn.batch_first was not True(use batch_first for better inference performance)\n",
-      "  warnings.warn(f\"enable_nested_tensor is True, but self.use_nested_tensor is False because {why_not_sparsity_fast_path}\")\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Files already downloaded and verified\n",
-      "Files already downloaded and verified\n"
-     ]
-    },
     {
      "name": "stderr",
      "output_type": "stream",
@@ -95,32 +131,16 @@
       "TPU available: False, using: 0 TPU cores\n",
       "IPU available: False, using: 0 IPUs\n",
       "HPU available: False, using: 0 HPUs\n",
-      "c:\\Users\\benoi\\AppData\\Local\\pypoetry\\Cache\\virtualenvs\\projet-8inf974-qm87_-2b-py3.9\\lib\\site-packages\\lightning\\pytorch\\trainer\\connectors\\logger_connector\\logger_connector.py:75: Starting from v1.9.0, `tensorboardX` has been removed as a dependency of the `lightning.pytorch` package, due to potential conflicts with other packages in the ML ecosystem. For this reason, `logger=True` will use `CSVLogger` as the default logger, unless the `tensorboard` or `tensorboardX` packages are found. Please `pip install lightning[extra]` or one of them to enable TensorBoard support by default\n",
-      "c:\\Users\\benoi\\AppData\\Local\\pypoetry\\Cache\\virtualenvs\\projet-8inf974-qm87_-2b-py3.9\\lib\\site-packages\\lightning\\pytorch\\loops\\utilities.py:73: `max_epochs` was not set. Setting it to 1000 epochs. To train without an epoch limit, set `max_epochs=-1`.\n",
       "\n",
-      "  | Name      | Type              | Params\n",
-      "------------------------------------------------\n",
-      "0 | model     | VisionTransformer | 8.9 M \n",
-      "1 | criterion | CrossEntropyLoss  | 0     \n",
-      "------------------------------------------------\n",
-      "8.9 M     Trainable params\n",
+      "  | Name      | Type             | Params\n",
+      "-----------------------------------------------\n",
+      "0 | model     | EfficientNet     | 4.0 M \n",
+      "1 | criterion | CrossEntropyLoss | 0     \n",
+      "-----------------------------------------------\n",
+      "4.0 M     Trainable params\n",
       "0         Non-trainable params\n",
-      "8.9 M     Total params\n",
-      "35.656    Total estimated model params size (MB)\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Sanity Checking: |          | 0/? [00:00<?, ?it/s]"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "c:\\Users\\benoi\\AppData\\Local\\pypoetry\\Cache\\virtualenvs\\projet-8inf974-qm87_-2b-py3.9\\lib\\site-packages\\lightning\\pytorch\\trainer\\connectors\\data_connector.py:441: The 'val_dataloader' does not have many workers which may be a bottleneck. Consider increasing the value of the `num_workers` argument` to `num_workers=11` in the `DataLoader` to improve performance.\n"
+      "4.0 M     Total params\n",
+      "16.081    Total estimated model params size (MB)\n"
      ]
     },
     {
@@ -141,25 +161,18 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch 0:   1%|▏         | 5/391 [01:05<1:24:02,  0.08it/s, v_num=18]"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "c:\\Users\\benoi\\AppData\\Local\\pypoetry\\Cache\\virtualenvs\\projet-8inf974-qm87_-2b-py3.9\\lib\\site-packages\\lightning\\pytorch\\trainer\\call.py:54: Detected KeyboardInterrupt, attempting graceful shutdown...\n"
+      "Epoch 0:   0%|          | 0/469 [00:00<?, ?it/s] "
      ]
     }
    ],
    "source": [
-    "from pipeline import CIFAR10_EXP\n",
+    "from pipeline import FashionMNIST_EXP\n",
     "\n",
     "# Instantiate the model\n",
     "model = model_class(num_classes=10)\n",
     "\n",
     "# Train using PyTorch Lightning Trainer\n",
-    "CIFAR10_EXP(model)"
+    "FashionMNIST_EXP(model)"
    ]
   }
  ],
